2011-07-06  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Provide hints
	in error log if opcontrol errors are detected.
	* src/org/eclipse/linuxtools/oprofile/core/OprofileCorePlugin.java (log): Added logging methods.
	

2011-06-01  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Add print
	statements to show what's going on on stdout/stderr of the called process if debugging is turned on.
	This might be useful for tracing down weird bugs.

2011-05-31  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Do better
	error reporting, when user faces the nmi_watchdog problem.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties: Ditto.

2011-05-16  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java:
	Revert workaround fix for Eclipse BZ #343025.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/OprofileSAXHandler.java: Applied actual fix
	for Eclipse BZ #343025.

2011-03-14  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java (buildCache):
	Temporary fix for Eclipse Bz #338270.

2011-02-11  Severin Gehwolf  <sgehwolf@redhat.com>

	* natives/linux/opxml: Remove opxml.
	* natives/linux/opxml/.svnignore: Removed.
	* natives/linux/opxml/imageheader.cc: Removed.
	* natives/linux/opxml/imageheader.h: Removed.
	* natives/linux/opxml/Makefile: Removed.
	* natives/linux/opxml/move_opxml.sh: Removed.
	* natives/linux/opxml/opinfo.cc: Removed.
	* natives/linux/opxml/opinfo.h: Removed.
	* natives/linux/opxml/oprofiledb.cc: Removed.
	* natives/linux/opxml/oprofiledb.h: Removed.
	* natives/linux/opxml/opxml.cc: Removed.
	* natives/linux/opxml/oxmlstream.h: Removed.