@@ -17,8 +17,8 @@ oprofileInit.error.statusMessage=An error occurred initializing OProfile for use
 oprofileInit.error.dialog.title=Error initializing OProfile
 oprofileInit.error.dialog.message=FATAL: The OProfile kernel module could not be loaded.
 
-opcontrol.error.log.stderr=opcontrol process error output
-opcontrol.error.log.stdout=opcontrol process output
+process.log.stderr={0} process error output: {1}
+process.log.stdout={0} process output: {1}
 
 opcontrolRun.error.statusMessage=Error during run of opcontrol
 opcontrolNonZeroExitCodeExtraInfo.error.statusMessage=Exit code of opcontrol indicates failure.\nLook for additional information in the Error Log.
